--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 An I/O library for long running applications that will allow them to communicate progress updates to their users over IM protocols like Jabber.
-
-More to be added later, time for homework.  :(
+<br />
+Checkout our <a href='https://github.com/Sheyne/chatIO/blob/master/README.md'>readme</a>.
